<resources>
    <string name="app_name">Arnold MDB</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="home_page">Home Page</string>
    <string name="find_record">Find Record</string>
    <string name="add_record">Add Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="select_an_item">Select an item</string>
    <string name="more">More...</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="save_film">Save Film</string>
    <string name="film_relase_year">Film Relase Year</string>
    <string name="film_genre">Film Genre</string>
    <string name="film_name">Film Name</string>
    <string name="film_plot">Film Plot</string>
    <string name="delete_film">Delete Film</string>
    <string name="delete_all">Delete all data</string>
    <string name="film_director">Film Director</string>
    <string name="about_app">The Arnold Schwarzenegger Movie Database</string>
    <string name="appname_long">Arnold MDB</string>
    <string name="here_is_information_about_the_actor">Here is information about the actor:</string>
    <string name="app_version">"App Version: "</string>
    <string name="edit_record_edits_a_record">Edit Record- Edits a record.</string>
    <string name="delete_deletes_a_movie_from_the_database">Delete - Deletes a Movie from the database.</string>
    <string name="email_to_developer">Email to Developer</string>
    <string name="nothing_to_view_yet_please_add_a_record_first">Nothing to view yet, please add a record first.</string>

</resources>